# qedit

./: .gitignore  CMakeLists.txt  Doxyfile  INSTALL  Makefile.am  QEdit.pro  QEdit.spec.in  autogen.sh  configure.in  icon.icns  qedit.desktop  qedit.pro  qedit.spec.cmake  qedit.spec.in
document-classes/: BlockDelimiter.cpp  BlockDelimiter.h  BlockDelimiterDialog.cpp  BlockDelimiterDialog.h  BlockDelimiterDisplay.cpp  BlockDelimiterDisplay.h  BlockDelimiterList.cpp  BlockDelimiterList.h  BlockDelimiterModel.cpp  BlockDelimiterModel.h  BlockDelimiterSegment.h  BlockMarker.h  CMakeLists.txt  CollapsedBlockData.cpp  CollapsedBlockData.h  Config.h.cmake  Config.h.in  DocumentClass.cpp  DocumentClass.h  DocumentClassConfiguration.cpp  DocumentClassConfiguration.h  DocumentClassDialog.cpp  DocumentClassDialog.h  DocumentClassIcons.h  DocumentClassManager.cpp  DocumentClassManager.h  DocumentClassManagerDialog.cpp  DocumentClassManagerDialog.h  DocumentClassModel.cpp  DocumentClassModel.h  DocumentClassModifiedDialog.cpp  DocumentClassModifiedDialog.h  DocumentClassPreview.cpp  DocumentClassPreview.h  DocumentClassTextEditor.cpp  DocumentClassTextEditor.h  HighlightBlockData.cpp  HighlightBlockData.h  HighlightBlockFlags.cpp  HighlightBlockFlags.h  (+81 more)
filesystem/: CMakeLists.txt  FileIconProvider.cpp  FileIconProvider.h  FileInformationDialog.cpp  FileInformationDialog.h  FileRecordProperties.h  FileRecordToolTipWidget.cpp  FileRecordToolTipWidget.h  FileSystemFrame.cpp  FileSystemFrame.h  FileSystemHistory.cpp  FileSystemHistory.h  FileSystemIconNames.h  FileSystemIcons.h  FileSystemModel.cpp  FileSystemModel.h  FileSystemThread.cpp  FileSystemThread.h  Makefile.am  RemoveFilesDialog.cpp  RemoveFilesDialog.h  RenameFileDialog.cpp  RenameFileDialog.h  filesystem.pro
patterns/: Makefile.am  alice_patterns.xml  bibtex_patterns.xml  c_patterns.xml  default_patterns.xml  diff_patterns.xml  fortran_patterns.xml  html_patterns.xml  latex_patterns.xml  makefile_patterns.xml  perl_patterns.xml  python_patterns.xml  shell_patterns.xml  xml_patterns.xml
pixmaps/: Makefile.am
src/: Application.cpp  Application.h  AskForSaveDialog.cc  AskForSaveDialog.cpp  AskForSaveDialog.h  AutoSave.cc  AutoSave.cpp  AutoSave.h  AutoSaveEvent.h  AutoSaveThread.cc  AutoSaveThread.cpp  AutoSaveThread.h  BlockDelimiterDisplay.cpp  BlockDelimiterDisplay.h  BlockDelimiterSegment.h  BlockDelimiterWidget.cpp  BlockDelimiterWidget.h  BlockMarker.h  CMakeLists.txt  CloseAllDialog.cpp  CloseAllDialog.h  CloseFilesDialog.cpp  CloseFilesDialog.h  CollapsedBlockData.cpp  CollapsedBlockData.h  Config.h.cmake  Config.h.in  ConfigurationDialog.cc  ConfigurationDialog.cpp  ConfigurationDialog.h  DefaultOptions.h  DefaultOptions.h.in  Diff.cc  Diff.cpp  Diff.h  DocumentClass.cc  DocumentClass.h  DocumentClassDialog.cc  DocumentClassDialog.h  DocumentClassManager.cc  (+166 more)
