Patternsdir = $(prefix)/share/QEdit/patterns
Patterns_DATA = \
 c_patterns.xml \
 default_patterns.xml \
 diff_patterns.xml \
 fortran_patterns.xml \
 html_patterns.xml \
 latex_patterns.xml \
 perl_patterns.xml \
 makefile_patterns.xml \
 shell_patterns.xml \
 xml_patterns.xml

EXTRA_DIST = \
 c_patterns.xml \
 default_patterns.xml \
 diff_patterns.xml \
 fortran_patterns.xml \
 html_patterns.xml \
 latex_patterns.xml \
 perl_patterns.xml \
 makefile_patterns.xml \
 shell_patterns.xml \
 xml_patterns.xml
