AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = \
  crystal/back.png \
  crystal/bookmark.png \
  crystal/document.png \
  crystal/documents.png \
  crystal/down.png \
  crystal/editcut.png \
  crystal/fileclose.png \
  crystal/filenew.png \
  crystal/fileprint.png \
  crystal/filesaveas.png \
  crystal/filesave.png \
  crystal/folder.png \
  crystal/fonts.png \
  crystal/forward.png \
  crystal/gohome.png \
  crystal/history.png \
  crystal/indent.png \
  crystal/info.png \
  crystal/link_overlay.png \
  crystal/parent_directory.png \
  crystal/save_all.png \
  crystal/up.png \
  crystal/user-home.png \
  crystal/view_bottom.png \
  crystal/view_left_right.png \
  crystal/view_remove.png \
  crystal/view_right.png \
  crystal/view_top_bottom.png \
  crystal/window_fullscreen.png \
  \
  oxygen/back.png \
  oxygen/bookmark.png \
  oxygen/document.png \
  oxygen/documents.png \
  oxygen/down.png \
  oxygen/editcut.png \
  oxygen/fileclose.png \
  oxygen/filenew.png \
  oxygen/fileprint.png \
  oxygen/filesaveas.png \
  oxygen/filesave.png \
  oxygen/folder.png \
  oxygen/fonts.png \
  oxygen/forward.png \
  oxygen/gohome.png \
  oxygen/history.png \
  oxygen/indent.png \
  oxygen/info.png \
  oxygen/link_overlay.png \
  oxygen/parent_directory.png \
  oxygen/save_all.png \
  oxygen/up.png \
  oxygen/user-home.png \
  oxygen/view_bottom.png \
  oxygen/view_left_right.png \
  oxygen/view_remove.png \
  oxygen/view_right.png \
  oxygen/view_top_bottom.png \
  oxygen/window_fullscreen.png
