AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = \
  back.png \
  bookmark.png \
  document.png \
  documents.png \
  down.png \
  editcut.png \
  fileclose.png \
  filenew.png \
  filesaveas.png \
  filesave.png \
  folder.png \
  fonts.png \
  forward.png \
  gohome.png \
  history.png \
  indent.png \
  info.png \
  link_overlay.png \
  parent_directory.png \
  save_all.png \
  up.png \
  user-home.png \
  view_bottom.png \
  view_left_right.png \
  view_remove.png \
  view_right.png \
  view_top_bottom.png \
  window_fullscreen.png
