# $Id$

AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = \
arrow-down.png \
arrow-up.png \
bookmarks.png \
document-close.png \
document-multiple.png \
document-new.png \
document.png \
document-save-all.png \
document-save-as.png \
document-save.png \
emblem-symbolic-link.png \
folder.png \
format-indent-more.png \
go-home.png \
go-next.png \
go-previous.png \
go-up.png \
info.png \
tools-check-spelling.png \
user-home.png \
view-bottom-new.png \
view-fullscreen.png \
view-history.png \
view-close.png \
view-right-new.png \
view-split-left-right.png \
view-split-top-bottom.png
